--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "devDependencies": {
     "browser-sync": "^2.18.12",
     "highlight.js": "^9.11.0",
-    "markdown-it": "^8.3.1"
+    "markdown-it": "^8.3.1",
+    "shortid": "^2.2.8"
   },
   "dependencies": {
     "@types/react": "^16.0.40"
